# hey

./: .gitignore  README.md  history.json  pyproject.toml
src/core/: chat.py  gemini.py  openai.py  router.py
src/heyai/: dev.py  main.py  system.py
src/shared/: history.py  profiles.py  settings.py  util.py
tests/: test_unit.py
